# media-demo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/giffard/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/giffard/opengl/: AppUtil.kt  GLSurfaceViewRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/giffard/opengl/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
video-player/: build.gradle.kts
video-player/src/androidTest/java/com/giffard/video_player/: ExampleInstrumentedTest.kt
video-player/src/main/cpp/: CMakeLists.txt  video_player.cpp
video-player/src/main/java/com/giffard/video_player/: FrameCallback.kt  VideoPlayer.kt
video-player/src/main/java/com/giffard/video_player/decoder/: FFmpegDecoder.kt  FFmpegDecoderFactory.kt  VideoDecoder.kt  VideoDecoderFactory.kt
video-player/src/main/java/com/giffard/video_player/renderer/: VideoRenderer.kt
video-player/src/test/java/com/giffard/video_player/: ExampleUnitTest.kt
